crates/djls-source/src/snapshots/djls_source__render__tests__two_annotations_different_lines.snap
---
source: crates/djls-source/src/render.rs
expression: plain().render(&diag)
---
error[S103]: 'content' does not match 'sidebar'
 --> templates/layout.html:3:1
  |
1 | {% block sidebar %}
  | ------------------- opening tag is 'sidebar'
2 | <nav>Links</nav>
3 | {% endblock content %}
  | ^^^^^^^^^^^^^^^^^^^^^^ closing tag says 'content'
